--- a/Tecwiews_Dados/style.css
+++ b/Tecwiews_Dados/style.css
@@ -73,3 +73,42 @@ body {
   background-color: var(--laranja);
   color: white;
 }
+
+.recepcao {
+  background-color: #f4f4f4;
+  padding: 40px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.recepcao-imagem img {
+  width: 300px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.conteudo-recepcao {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: 20px;
+  text-align: left;
+}
+
+.frase-impacto {
+  color: var(--azul);
+  font-size: 3.4rem;
+  margin-bottom: 20px;
+}
+
+.texto-recepcao {
+  color: #333;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  margin-bottom: 15px;
+}
+
